[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lumed_tpm"
version = "0.9.rc1"
authors = [{ name = "Guillaume Sheehy", email = "guillaume.sheehy@polymtl.ca" }]
dependencies = [
    "PyVISA-py",
    "PyQt5",
    "zeroconf",
    "psutil",
    "pyserial",
    "pyusb",
    "pyqt5-fugueicons",
]
description = "A module to control Thorlabs Powermeters."
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.dynamic]
version = { attr = "iadpython.__version__" }
